--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.0",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "spotify-web-api-node": "^4.0.0"
   }
 }
